src/testData/analysis/unicodeEscapes.cr
#EXTRA_ATTRIBUTE: CrUnicodeEscapeElement.getEscapedChar

'<error descr="Invalid Unicode codepoint"><warning descr="">\u</warning></error>'

'<error descr="Invalid Unicode codepoint"><warning descr="">\uA</warning></error>'

'<error descr="Invalid Unicode codepoint"><warning descr="">\uAB</warning></error>'

'<error descr="Invalid Unicode codepoint"><warning descr="">\uAB1</warning></error>'

'<warning descr="ꬒ">\uAB12</warning>'

'<warning descr="ꬒ">\uAB12</warning>'

'<warning descr="ꯅ">\uaBc5</warning>'

'<error descr="Invalid Unicode codepoint (surrogate half)"><warning>\uDABC</warning></error>'

'<warning descr="">\uEEEE</warning>'

"<error descr="Invalid Unicode codepoint"><warning descr="">\u</warning></error>"

"<error descr="Invalid Unicode codepoint"><warning descr="">\u</warning></error>x"

"<error descr="Invalid Unicode codepoint"><warning descr="">\uA</warning></error>"

"<error descr="Invalid Unicode codepoint"><warning descr="">\uA</warning></error>x"

"<error descr="Invalid Unicode codepoint"><warning descr="">\uAB</warning></error>"

"<error descr="Invalid Unicode codepoint"><warning descr="">\uAB</warning></error>x"

"<error descr="Invalid Unicode codepoint"><warning descr="">\uAB1</warning></error>"

"<error descr="Invalid Unicode codepoint"><warning descr="">\uAB1</warning></error>x"

"<warning descr="ꬒ">\uAB12</warning>"

"<warning descr="ꬒ">\uAB12</warning>x"

"<warning descr="ꯅ">\uaBc5</warning>"

"<error descr="Invalid Unicode codepoint (surrogate half)"><warning>\uDABC</warning></error>"

"<warning descr="">\uEEEE</warning>"